# muten

./: .gitignore  CMakeLists.txt  README.md
include/muten/: allocator.hpp  cpu_allocator.hpp  cpu_device.hpp  device.hpp  device_type.hpp  muten.hpp  tensor.hpp
include/muten/backend/: backend.hpp  cpu.hpp
scripts/: debug.sh  release.sh
src/: CMakeLists.txt  allocator.cpp  cpu.cpp  device_type.cpp  tensor.cpp
src/backend/: cpu.cpp
tests/: CMakeLists.txt  test_hipcpu.cpp  test_tensor.cpp
